tests/negative/exc_value_type.spk
; The exception accessors demand an Exception, not a bare value.
(exc-value 5)
